--- a/HTTP/请求数据.md
+++ b/HTTP/请求数据.md
@@ -2189,3 +2189,195 @@ socket.addEventListener('message', function (event) {
 
 `timeout`属性添加于Gecko 12.0  Gecko 12.0。
 
+## [同步请求](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#同步请求)
+
+**注意：**从Gecko 30.0 (Firefox 30.0 / Thunderbird 30.0 / SeaMonkey 2.27)，Blink 39.0和Edge 13开始，主线程上的同步请求由于对用户体验的负面影响而被弃用。
+
+**同步XHR通常会导致网络挂起**。但开发人员通常不会注意到这个问题，因为在网络状况不佳或服务器响应速度慢的情况下，挂起只会显示同步XHR现在处于弃用状态。建议开发人员远离这个API。
+
+同步XHR不允许所有新的XHR功能（如`timeout`或`abort`）。这样做会调用`InvalidAccessError`。
+
+### [例子：HTTP 同步请求](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#例子：http_同步请求)
+
+这个例子演示了如何进行一个简单的同步请求.
+
+```js
+  const xhr = new XMLHttpRequest();
+  xhr.open("GET", "http://127.0.0.1/test/genomefile.txt", false);
+  xhr.send(null);
+  if (xhr.status === 200) {
+    console.log(xhr.responseText);
+  }
+```
+
+第一行实例化一个`XMLHttpRequest`对象.第二行使用该对象打开一个HTTP请求,并指定使用`HTTP GET`方法来获取Mozilla.org主页内容,操作模式为同步.
+
+第三行发送这个请求.参数为`null`表示`GET`请求不需要请求实体.
+
+第四行为请求结束之后,检查请求状态码.如果状态码为200, 表示该请求成功,请求到的页面源文件会输出到控制台上.
+
+### [例子: 在 `Worker` 中使用HTTP 同步请求](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#例子_在_worker_中使用http_同步请求)
+
+在`Worker`中使用`XMLHttpRequest`时,同步请求比异步请求更适合.
+
+`**example.html**` (主页):
+
+```html
+<!doctype html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>MDN Example</title>
+<script type="text/javascript">
+  var oMyWorker = new Worker("myTask.js");
+  oMyWorker.onmessage = function(oEvent) {
+    alert("Worker said: " + oEvent.data);
+  };
+
+  oMyWorker.postMessage("Hello");
+</script>
+</head>
+<body></body>
+</html>
+```
+
+`**myFile.txt**` ( `XMLHttpRequest`对象同步请求的文件):
+
+```
+Hello World!!
+```
+
+`**myTask.js**` (包含了`Worker`代码):
+
+```js
+self.onmessage = function (oEvent) {
+  if (oEvent.data === "Hello") {
+    var oReq = new XMLHttpRequest();
+    oReq.open("GET", "myFile.txt", false);  // 同步请求
+    oReq.send(null);
+    self.postMessage(oReq.responseText);
+  }
+};
+```
+
+> **注意：**由于使用了`Worker`，所以该请求实际上也是异步的。
+
+**可以使用类似的方法，让脚本在后台与服务器交互,预加载某些内容**。查看[使用web workers](https://developer.mozilla.org/zh-CN/docs/Web/API/Web_Workers_API/Using_web_workers)了解更多详情。
+
+### [将同步XHR用例调整到Beacon API](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/Synchronous_and_Asynchronous_Requests#将同步xhr用例调整到beacon_api)
+
+在某些情况下，XMLHttpRequest的同步使用是不可替代的，就像在[window.onunload](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/Window/unload_event)和[window.onbeforeunload](https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/Window/beforeunload_event)事件期间一样。 您应该考虑使用带有`Keepalive`标志的`fetch`API。 当`keepalive`的`fetch`不可用时，可以考虑使用[navigator.sendBeacon](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon) API可以支持这些用例，通常在提供良好UX的同时。
+
+以下示例（来自[sendBeacon](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon)文档）显示了一个理论分析代码，该代码尝试通过在卸载处理程序中使用同步XMLHttpRequest将数据提交给服务器。 这导致页面的卸载被延迟。
+
+```js
+  window.addEventListener("unload", logData, false);
+  function logData(){
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST", "http://127.0.0.1/test/genomefile.txt", false);
+    xhr.setRequestHeader("Content-Type", "text/plain;charset=UTF-8");
+    xhr.send(analyticsData);
+  }
+```
+
+使用**`sendBeacon()`**方法，**当用户代理有机会的时候，数据将被异步传输到Web服务器**，**而不会延迟卸载或影响下一个导航的性能。**
+
+以下示例显示了使用**`sendBeacon()`**方法将数据提交给服务器的理论分析代码模式。
+
+```js
+window.addEventListener('unload', logData, false);
+
+function logData() {
+    navigator.sendBeacon("/log", analyticsData);
+}
+```
+
+---
+
+# Navigator.sendBeacon()
+
+**`navigator.sendBeacon()`** 方法可用于通过 [HTTP POST](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Methods/POST) 将少量数据 [异步](https://developer.mozilla.org/zh-CN/docs/Glossary/Asynchronous) 传输到 Web 服务器。
+
+它**主要用于将统计数据发送到 Web 服务器**，同时避免了用传统技术（如：[`XMLHttpRequest`](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest)）发送分析数据的一些问题。
+
+## [语法](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#语法)
+
+```js
+navigator.sendBeacon(url);
+navigator.sendBeacon(url, data);
+```
+
+### [参数](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#参数)
+
+- `url`
+
+  `url` 参数表明 `data` 将要被发送到的网络地址。
+
+- `data` 可选
+
+  `data` 参数是将要发送的 [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer)、[`ArrayBufferView`](https://developer.mozilla.org/zh-CN/docs/Web/API/ArrayBufferView)、[`Blob`](https://developer.mozilla.org/zh-CN/docs/Web/API/Blob)、[`DOMString`](https://developer.mozilla.org/zh-CN/docs/Web/API/DOMString)、[`FormData`](https://developer.mozilla.org/zh-CN/docs/Web/API/FormData) 或 [`URLSearchParams`](https://developer.mozilla.org/zh-CN/docs/Web/API/URLSearchParams) 类型的数据。
+
+### [返回值](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#返回值)
+
+当用户代理成功把数据加入传输队列时，**`sendBeacon()`** 方法将会返回 `true`，否则返回 `false`。
+
+## [描述](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#描述)
+
+这个方法主要用于满足统计和诊断代码的需要，**这些代码通常尝试在卸载（unload）文档之前向 Web 服务器发送数据**。过早的发送数据可能导致错过收集数据的机会。然而，对于开发者来说保证在文档卸载期间发送数据一直是一个困难。因为用户代理通常会忽略在 `unload (en-US)` 事件处理器中产生的异步 [`XMLHttpRequest`](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest)。
+
+过去，为了解决这个问题， 统计和诊断代码通常要在
+
+- 发起一个同步 `XMLHttpRequest` 来发送数据。
+- 创建一个 <img>元素并设置 `src`，大部分用户代理会延迟卸载（unload）文档以加载图像。
+- 创建一个几秒的 no-op 循环。
+
+**上述的所有方法都会迫使用户代理延迟卸载文档，并使得下一个导航出现的更晚**。下一个页面对于这种较差的载入表现无能为力。
+
+这就是 **`sendBeacon()`** 方法存在的意义。使用 **`sendBeacon()`** 方法**会使用户代理在有机会时异步地向服务器发送数据**，**同时不会延迟页面的卸载**或**影响下一导航的载入性能**，这意味着：
+
+- 数据发送是可靠的。
+- 数据异步传输。
+- 不影响下一导航的载入。
+
+数据是通过 [HTTP POST](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Methods/POST) 请求发送的。
+
+### [在会话结束时发送统计数据](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#在会话结束时发送统计数据)
+
+网站通常希望在用户完成页面浏览后向服务器发送分析或诊断数据，最可靠的方法是在 `visibilitychange (en-US)` 事件发生时发送数据：
+
+```js
+  document.addEventListener("visiblitychange", function (){
+    if (document.visiblityState === "hidden") {
+      navigator.sendBeacon("/log", analyticsData);
+    }
+  });
+```
+
+### [避免使用 unload 和 beforeunload](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#避免使用_unload_和_beforeunload)
+
+过去，许多网站使用 `unload (en-US)` 或 `beforeunload (en-US)` 事件以在会话结束时发送统计数据。然而这是不可靠的，在许多情况下（尤其是移动设备）浏览器不会产生 `unload`、`beforeunload` 或 `pagehide` 事件。下面列出了一种不触发上述事件的情况：
+
+1. 用户加载了网页并与其交互。
+2. 完成浏览后，用户切换到了其它应用程序，而不是关闭选项卡。
+3. 随后，用户通过手机的应用管理器关闭了浏览器应用。
+
+此外，`unload` 事件与现代浏览器实现的往返缓存（[bfcache](https://web.dev/bfcache/)）不兼容。在部分浏览器（如：Firefox）通过在 bfcache 中排除包含 `unload` 事件处理器的页面来解决不兼容问题，但这存在性能损失。其它浏览器，例如 Safari 和 Android 上的 Chrome 浏览器则采取用户在同一标签页下导航至其它页面时不触发 `unload` 事件的方法来解决不兼容问题。
+
+Firefox 也会在 bfcache 中排除包含 `beforeunload` 事件处理器的页面。
+
+#### 使用 pagehide 作为回退
+
+可使用 `pagehide (en-US)` 事件来代替部分浏览器未实现的 `visibilitychange` 事件。和 `beforeunload` 与 `unload` 事件类似，这一事件不会被可靠地触发（特别是在移动设备上），但它与 bfcache 兼容。
+
+## [示例](https://developer.mozilla.org/zh-CN/docs/Web/API/Navigator/sendBeacon#示例)
+
+示例代码使用 `visibilitychange (en-US)` 事件来调用 `sendBeacon()` 以发送统计数据。
+
+```js
+document.addEventListener('visibilitychange', function logData() {
+  if (document.visibilityState === 'hidden') {
+    navigator.sendBeacon('/log', analyticsData);
+  }
+});
+```
+
