--- a/牛客刷题题目/前端面试-前端基础.md
+++ b/牛客刷题题目/前端面试-前端基础.md
@@ -178,6 +178,90 @@ audio属性
 | canplaythrough | 歌曲已经载入完全完成                               |
 | canplay        | 缓冲至目前可播放状态。                             |
 
+---
+
+#### 1.6 页面从获得document到渲染之间的事件
+
+　页面加载时，大致可以分为以下几个步骤：
+
+1. 　　开始解析HTML文档结构
+2. 　　加载外部样式表及JavaScript脚本
+3. 　　解析执行JavaScript脚本
+4. 　　DOM树渲染完成
+5. 　　加载未完成的外部资源（如 图片）
+6. ​    页面加载成功
+
+　那么在这整个过程中触发了哪些**常用**的事件呢？
+
+**document readystatechange事件**
+
+　　**readyState** 属性描述了文档的加载状态，在整个加载过程中 document.readyState会不断变化，每次变化都会触发readystatechange事件。
+
+　　**readyState** 有以下状态：
+
+　　　　loading / 加载`document` 仍在加载。
+
+　　　　interactive / 互动文档已经完成加载，文档已被解析，但是诸如图像，[样式表](https://so.csdn.net/so/search?q=样式表&spm=1001.2101.3001.7020)和框架之类的子资源仍在加载。
+
+　　　　complete / 完成T文档和所有子资源已完成加载。状态表示 `load` 事件即将被触发。
+
+　　比如说在步骤2的时候对应 interactive  步骤5之后对应complete ，都会触发readystatechange事件。
+
+> 文档，图片等加载时的readyState 和 XMLHttpRequest.readyState 是不一样的。要注意区分
+
+**document DOMContentLoaded事件**
+
+　　DOM树渲染完成时触发DOMContentLoaded事件，此时可能外部资源还在加载。 jquery中的ready事件就是同样的效果
+
+**window load事件**
+
+　　所有的资源全部加载完成会触发window 的 load事件。
+
+```html
+    <div>
+      <h1>测试页面加载时，事件触发顺序</h1>
+      <img src="https://img.php.cn/upload/article/000/000/040/5de23106225a7269.jpg">
+      <h1>测试页面加载时，事件触发顺序</h1>
+      <img src="https://img95.699pic.com/xsj/1k/3o/kd.jpg!/fw/700/watermark/url/L3hzai93YXRlcl9kZXRhaWwyLnBuZw/align/southeast">
+    </div>
+<script type="text/javascript">
+  console.log("resolve body javascript");
+
+  window.addEventListener("load", function(){
+    console.log("window load");
+  });
+
+  document.addEventListener("readystatechange", function(){
+    console.log("document readystatechange:" + document.readyState);
+  });
+
+  document.addEventListener("DOMContentLoaded", function(){
+    console.log("document DOMContentLoaded");
+  });
+
+  document.addEventListener("load", function(){
+      //没有该事件,document.load()作为旧版的 w3c 标准 DOM Level 3 Load & Save module 其中的一部分。
+    console.log("document load");
+  });
+  
+    /*
+    test127.html:20 resolve body javascript
+    test127.html:27 document readystatechange:interactive
+    test127.html:31 document DOMContentLoaded
+    test127.html:27 document readystatechange:complete
+    test127.html:23 window load
+	*/
+</script>
+```
+
+所以在只需要文档结构加载完成就可以执行的脚本，可以监听DOMContentLoaded ；需要所有内容都加载完成才能执行的脚本，要监听window.onload  或者 document.readyState === 'complete'。　
+
+---
+
+#### 1.7 
+
+
+
 ------
 
 ## js基础
