--- a/牛客刷题题目/前端面试算法题.md
+++ b/牛客刷题题目/前端面试算法题.md
@@ -1276,3 +1276,123 @@ var rob = function(nums) {
 };
 ```
 
+---
+
+
+
+# 数组及对象扁平化
+
+数组
+
+```js
+const nestArr = [1, [2], [[3], [4]], [[[5], [6]]]];
+
+function flattenArray(array) {
+    let result = [];
+    for (let i = 0; i < array.length; i++) {
+        if (Array.isArray(array[i])) {
+            result = result.concat(flattenArray(array[i]));
+        } else {
+            result.push(array[i]);
+        }
+        
+    }
+    return result;
+}
+
+console.log(flattenArray(nestArr))  // => [ 1, 2, 3, 4, 5, 6 ]
+```
+
+
+
+对象
+
+```js
+const obj = {
+            a: {
+                b: 1,
+                c: 2,
+                d: { e: 5 },
+            },
+            b: [1, 3, { a: 2, b: 3 }],
+            c: 3
+        }
+        /* 
+            {   
+                'a.b': 1,  
+                'a.c': 2, 
+                'a.d.e': 5, 
+                'b[0]': 1, 
+                'b[1]': 3,    
+                'b[2].a': 2,   
+                'b[2].b': 3  
+                 c: 3  
+            }
+        */
+
+        function flatObj(o) {
+            if (typeof o !== 'object'){
+                throw new Error(`TypeError: need a object type but get a ${typeof o}`)
+            }
+            const res = {}
+            const flat = (obj, preKey = '') => {
+                Object.entries(obj).forEach(([key, value]) => {
+                    // preKey默认是'', 如果是递归入口 preKey有值 需要加 . 或者 [] 分割
+                    let newKey = key
+                    if (preKey) {
+                        newKey = `${preKey}${ Array.isArray(obj) ? `[${newKey}]` : `.${newKey}` }`
+                    }
+
+                   // 引用类型继续递归拍平, 基本类型设置到结果对象上
+                    if (value && typeof value === 'object') {
+                        return flat(value, newKey)
+                    }
+                    res[newKey] = value
+                })
+            }
+
+            flat(o)
+            return res
+        }
+        console.log(flatObj(obj))
+```
+
+```js
+let flatten = (obj) => {
+    let result = {};
+
+    let process = (key, value) => {
+        // 首先判断是基础数据类型还是引用数据类型
+        if (Object(value) !== value) {
+            // 基础数据类型
+            if (key) {
+                result[key] = value;
+            }
+        } else if(Array.isArray(value)){
+               for (let i = 0; i< value.length; i++) {
+                process(`${key}[${i}]`, value[i])
+            }
+            if (value.length === 0) {
+                result[key] = [];
+            }
+        } else {
+            let objArr = Object.keys(value);
+            objArr.forEach(item => {
+                process(key ? `${key}.${item}` : `${item}`, value[item])
+            });
+            if (objArr.length === 0 && key) {
+                result[key] = {};
+            }
+        }
+    }
+    process('', obj)
+    return result;
+}
+```
+
+
+
+---
+
+# 手写Promise
+
