--- a/面试学习题目/前端面试-前端基础.md
+++ b/面试学习题目/前端面试-前端基础.md
@@ -1719,6 +1719,41 @@ beijing
 
 ------
 
+#### 2.31 相等运算符隐藏的类型转换
+
+相等运算符隐藏的类型转换，会带来一些违反直觉的结果
+
+```js
+'' == '0' // false
+0 == '' // true
+0 == '0' // true
+
+false == 'false' // false
+false == '0' // true
+
+false == undefined // false
+false == null // false
+
+null == undefined // true
+null == 0  // false
+' \t\r\n' == 0 // true
+```
+
+Number,Boolean,String,Undefined这几种基本类型混合比较时，会将其转换成数字再进行比较
+
+
+基本类型与复合对象进行比较时，会先将复合对象转换成基本类型（依次调用valueOf与toString方法）再进行比较 
+
+undefined被当成基本类型，**undefined转换成数字是NaN**，因此undefined与除null之外的其它类型值进行比较时始终返回false(注意NaN==NaN返回false) 
+
+null被当成复合对象，**由于null没有valueOf与toString方法**，因此和除了undefined之外的其它类型值进行比较时始终返回false 
+
+- 存在 NaN 则返回 false
+
+
+
+---
+
 
 
 ## 异步相关
