--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10624,6 +10624,67 @@ console.log(result);
 
 
 ---
+## 473. 火柴拼正方形
+
+你将得到一个整数数组 matchsticks ，其中 matchsticks[i] 是第 i 个火柴棒的长度。你要用 所有的火柴棍 拼成一个正方形。你 不能折断 任何一根火柴棒，但你可以把它们连在一起，而且每根火柴棒必须 使用一次 。
+
+如果你能使这个正方形，则返回 true ，否则返回 false 。
+
+提示:
+
+1 <= matchsticks.length <= 15
+1 <= matchsticks[i] <= 108
+
+```js
+/**
+ * @param {number[]} matchsticks
+ * @return {boolean}
+ */
+var makesquare = function(matchsticks) {
+    let len = matchsticks.length;
+    if (len < 4) {
+        return false;
+    }
+    let totalLen = 0;
+    matchsticks.forEach((item) => {
+        totalLen += item;
+    });
+    if (totalLen % 4 !== 0) {
+        return false;
+    }
+    matchsticks.sort((a, b) => b - a);
+    let edgeLength = totalLen / 4;
+    if (matchsticks[0] > edgeLength) {
+        return false;
+    }
+    const edges = new Array(4).fill(0);
+
+    const dfs = (index) => {
+        if (index === len) {
+            return true;
+        }
+        for (let i = 0; i < 4; i++){
+            edges[i] += matchsticks[index];
+            if (edges[i] <= edgeLength && dfs(index + 1)) {
+                return true;
+            }
+            edges[i] -= matchsticks[index];
+        }
+        return false;
+    }
+    return dfs(0);
+
+};
+
+let matchsticks = [1,1,2,2,2];
+let result = makesquare(matchsticks);
+console.log(result);
+```
+
+
+
+---
+
 ## 476. 数字的补数
 
 对整数的二进制表示取反（0 变 1 ，1 变 0）后，再转换为十进制表示，可以得到这个整数的补数。
