--- a/学习记录.md
+++ b/学习记录.md
@@ -647,3 +647,18 @@ pdd笔试
 2022.05.28
 
 力扣: 删除最外层括号
+
+2022.05.29
+
+力扣: 
+
+2022.05.30
+
+力扣: 从根到叶的二进制数之和
+
+2022.05.31
+
+2022.06.01
+
+力扣: 火柴拼正方形
+
