--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9855,6 +9855,92 @@ var deserialize = function(data) {
 
 ---
 
+## 450. 删除二叉搜索树中的节点
+
+给定一个二叉搜索树的根节点 root 和一个值 key，删除二叉搜索树中的 key 对应的节点，并保证二叉搜索树的性质不变。返回二叉搜索树（有可能被更新）的根节点的引用。
+
+一般来说，删除节点可分为两个步骤：
+
+首先找到需要删除的节点；
+如果找到了，删除它。
+提示:
+
+节点数的范围 [0, 104].
+-105 <= Node.val <= 105
+节点值唯一
+root 是合法的二叉搜索树
+-105 <= key <= 105
+
+**进阶：** 要求算法时间复杂度为 O(h)，h 为树的高度。
+
+![删除二叉搜索树中的结点](E:\pogject\学习笔记\image\leetcode\删除二叉搜索树中的结点.png)
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} key
+ * @return {TreeNode}
+ */
+var deleteNode = function(root, key) {
+    let curr = root, currParent = null;
+    while (curr && curr.val !== key){
+        currParent = curr;
+        if (curr.val > key) {
+            curr = curr.left;
+        } else {
+            curr = curr.right;
+        }
+    }
+    if (!curr) {
+        return root;
+    }
+    if (curr.left === null && curr.right === null) {
+        //是叶节点
+        curr = null;
+    } else if (curr.right === null) {
+        curr = curr.left;
+    } else if (curr.left === null) {
+        curr = curr.right;
+    }else{
+        let successor = curr.right, successorParent = curr;
+        while (successor.left) {
+            successorParent = successor;
+            successor = successor.left;
+        }
+        if (successorParent.val === curr.val) {
+            successorParent.right = successor.right;
+        } else {
+            successorParent.left = successor.right;
+        }
+        successor.right = curr.right;
+        successor.left = curr.left;
+        curr = successor;
+    }
+    if (!currParent) {
+        return curr;
+    }else{
+        if (currParent.left && currParent.left.val === key) {
+            currParent.left = curr;
+        } else {
+            currParent.right = curr;
+        }
+        return root;
+    }
+};
+```
+
+
+
+---
+
 ## 453. 最小操作次数使数组元素相等
 
 给你一个长度为 n 的整数数组，每次操作将会使 n - 1 个元素增加 1 。返回让数组所有元素相等的最小操作次数。
