--- a/面试学习题目/前端面试-前端基础.md
+++ b/面试学习题目/前端面试-前端基础.md
@@ -1872,7 +1872,7 @@ false
 
 - 按常规的思路，这段代码应该输出 true，毕竟最小值小于最大值。但是却输出 false
 - MDN 相关文档是这样解释的
-  - Math.min 的参数是 0 个或者多个，如果多个参数很容易理解，返回参数中最小的。**如果没有参数，则返回 Infinity，无穷大。**
+  - Math.min 的参数是 **0 个或者多个**，如果多个参数很容易理解，返回参数中最小的。**如果没有参数，则返回 Infinity，无穷大。**
   - 而 Math.max **没有传递参数时返回的是-Infinity**.所以输出 false
 
 ##### Math.max()
@@ -9520,7 +9520,7 @@ class EventEmitter{
 
 ```js
 var lowestCommonAncestor = function(root, p, q) {
-if (!root || root === p || root === q) return root
+	if (!root || root === p || root === q) return root
     let left = lowestCommonAncestor(root.left, p, q)
     let right = lowestCommonAncestor(root.right, p, q)
     if (!left) return right
