--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -14718,6 +14718,44 @@ console.log(result);
 
 
 ---
+## 829. 连续整数求和
+
+给定一个正整数 n，返回 连续正整数满足所有数字之和为 n 的组数 。 
+提示:
+
+1 <= n <= 10^9
+
+```
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var consecutiveNumbersSum = function(n) {
+    let ans = 0;
+    let bound = 2 * n;
+    for (let k = 1; k * (k + 1) <= bound; k++){
+        if (isKConsecutive(n, k)) {
+            ans++;
+        }
+    }
+    return ans;
+};
+
+const isKConsecutive = (n, k) => {
+    if (k % 2 === 1) {
+        return n % k === 0;
+    } else {
+        return n % k !== 0 && 2 * n % k ===0;
+    }
+};
+
+console.log(consecutiveNumbersSum(15));
+```
+
+
+
+---
+
 ## 838. 推多米诺
 
 n 张多米诺骨牌排成一行，将每张多米诺骨牌垂直竖立。在开始时，同时把一些多米诺骨牌向左或向右推。
