--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10808,6 +10808,72 @@ console.log(result);
 
 ---
 
+## 478. 在圆内随机生成点
+
+给定圆的半径和圆心的位置，实现函数 randPoint ，在圆中产生均匀随机点。
+
+实现 Solution 类:
+
+Solution(double radius, double x_center, double y_center) 用圆的半径 radius 和圆心的位置 (x_center, y_center) 初始化对象
+randPoint() 返回圆内的一个随机点。圆周上的一点被认为在圆内。答案作为数组返回 [x, y] 。
+
+提示：
+
+0 < radius <= 108
+-107 <= x_center, y_center <= 107
+randPoint 最多被调用 3 * 104 次
+
+```js
+/**
+ * @param {number} radius
+ * @param {number} x_center
+ * @param {number} y_center
+ */
+var Solution = function(radius, x_center, y_center) {
+    this.radius = radius;
+    this.x_center = x_center;
+    this.y_center = y_center;
+};
+
+/**
+ * @return {number[]}
+ */
+Solution.prototype.randPoint = function() {
+    while (true){
+        let x = Math.random() * (this.radius * 2) - this.radius;
+        let y = Math.random() * (this.radius * 2) - this.radius;
+        if (x * x + y * y <= this.radius * this.radius) {
+            return [this.x_center + x, this.y_center + y];
+        }
+    }
+};
+
+/**
+ * Your Solution object will be instantiated and called as such:
+ * var obj = new Solution(radius, x_center, y_center)
+ * var param_1 = obj.randPoint()
+ */
+```
+
+```js
+var Solution = function(radius, x_center, y_center) {
+    this.xc = x_center;
+    this.yc = y_center;
+    this.r = radius;
+};
+
+Solution.prototype.randPoint = function() {
+    const u = Math.random();
+    const theta = Math.random() * 2 * Math.PI;
+    const r = Math.sqrt(u);
+    return [this.xc + r * Math.cos(theta) * this.r, this.yc + r * Math.sin(theta) * this.r];
+};
+```
+
+
+
+---
+
 ## 479.最大回文数乘积
 
 给定一个整数 n ，返回 可表示为两个 n 位整数乘积的 最大回文整数 。因为答案可能非常大，所以返回它对 1337 取余 。
