--- a/面试学习题目/前端岗面试高频题.md
+++ b/面试学习题目/前端岗面试高频题.md
@@ -6776,7 +6776,7 @@ async异步加载：就是告诉浏览器不必等到加载完外部文件，可
 
 **（1）、DNS解析URL**
 
-DNS解析就是寻找哪个服务器上有请求的资源，因为ip地址不易记忆，一般会使用URL域名（如[www.baidu.com](http://www.baidu.com/)）作为网址，DNS解析就是将域名“翻译”成IP地址
+DNS解析就是**寻找哪个服务器上有请求的资源**，因为ip地址不易记忆，一般会使用URL域名（如[www.baidu.com](http://www.baidu.com/)）作为网址，**DNS解析就是将域名“翻译”成IP地址**
 
 具体过程：
 
@@ -6804,7 +6804,7 @@ d、若状态码为200显示响应成功，浏览器接收到返回的HTML页面
 
 **（3）、浏览器对接收到的HTML页面进行渲染**
 
-a、浏览器根据深度遍历的方式把HTML节点遍历成DOM树
+a、浏览器根据**深度遍历**的方式把HTML节点遍历成DOM树
 
 b、将CSS解析成CSSOM树
 
@@ -7450,6 +7450,10 @@ TCP四次挥手：
 
 **因为**三次握手的第二次由服务器发送**SYN建立连接的信息**和**ACK确认建立连接的信息**是在同**一个报文中**传输的，而四次挥手的由服务器发送的**ACK 确认断开请求的信息**和**FIN 发送断开连接的信息**是在**两个报文中**传输的
 
+
+
+
+
 ---
 
 ## 1.5 请问在浏览器中输入[www.baidu.com](http://www.baidu.com/)后执行了哪些过程？
@@ -7490,6 +7494,8 @@ TCP通过以下方式保证数据传输的可靠性：
 几种常见**拥塞控制方法**：
 
 慢开始(slow-start )、拥塞避免(congestion avoidance )、快重传( fastretransmit )和快恢复( fastrecovery )。
+
+
 
 ---
 
