--- a/面试学习题目/前端面试-前端进阶.md
+++ b/面试学习题目/前端面试-前端进阶.md
@@ -2913,11 +2913,78 @@ page=1&cate=recommend&callback=jsoncallback
 
 **参考答案**：
 
-DNS（Domain Name Server，域名服务器）是进行域名(domain name)和与之相对应的IP地址 (IP address)转换的服务器。
+DNS（Domain Name Server，域名服务器）是**进行域名(domain name)和与之相对应的IP地址 (IP address)转换的服务器。**
+
+##### DNS
 
 DNS中保存了一张域名(domain name)和与之相对应的IP地址 (IP address)的表，以解析消息的域名。 域名是Internet上某一台计算机或计算机组的名称，用于在数据传输时标识计算机的电子方位（有时也指地理位置）。
 
 域名是由一串用点分隔的名字组成的，通常包含组织名，而且始终包括两到三个字母的后缀，以指明组织的类型或该域所在的国家或地区。
+
+DNS（Domain Names System），域名系统，是互联网一项服务，是进行域名和与之相对应的 IP 地址进行转换的服务器
+
+简单来讲，`DNS`相当于一个翻译官，负责将域名翻译成`ip`地址
+
+- IP 地址：**一长串能够唯一地标记网络上的计算机的数字**
+- 域名：是由一串用点分隔的名字组成的 Internet 上某一台计算机或计算机组的名称，用于在数据传输时对计算机的定位标识
+
+![img](E:\pogject\学习笔记\image\js\DNS1)
+
+##### 域名
+
+域名是一个具有层次的结构，从上到下一次为根域名、顶级域名、二级域名、三级域名...
+
+![img](E:\pogject\学习笔记\image\js\DNS2)
+
+例如`www.xxx.com`，`www`为三级域名、`xxx`为二级域名、`com`为顶级域名，系统为用户做了兼容，域名末尾的根域名`.`一般不需要输入
+
+在域名的每一层都会有一个域名服务器，如下图：
+
+![img](E:\pogject\学习笔记\image\js\DNS3)
+
+除此之外，还有电脑默认的本地域名服务器
+
+##### 查询方式
+
+DNS 查询的方式有两种：
+
+- 递归查询：如果 A 请求 B，那么 B 作为请求的接收者一定要给 A 想要的答案
+
+![img](E:\pogject\学习笔记\image\js\DNS4)
+
+- 迭代查询：如果接收者 B 没有请求者 A 所需要的准确内容，接收者 B 将告诉请求者 A，如何去获得这个内容，但是自己并不去发出请求
+
+![img](E:\pogject\学习笔记\image\js\DNS5)
+
+##### 域名缓存
+
+在域名服务器解析的时候，使用缓存保存域名和`IP`地址的映射
+
+计算机中`DNS`的记录也分成了两种缓存方式：
+
+- 浏览器缓存：浏览器在获取网站域名的实际 IP 地址后会对其进行缓存，减少网络请求的损耗
+- 操作系统缓存：操作系统的缓存其实是用户自己配置的 `hosts` 文件
+
+##### 查询过程
+
+解析域名的过程如下：
+
+- 首先搜索**浏览器的 DNS 缓存**，缓存中维护一张域名与 IP 地址的对应表
+- 若没有命中，则继续搜索**操作系统的 DNS 缓存**
+- 若仍然没有命中，则**操作系统**将域名发送至**本地域名服务器**，本地域名服务器采用**递归查询**自己的 DNS 缓存，查找成功则返回结果
+- 若**本地域名服务器**的 DNS 缓存没有命中，则**本地域名服务器**向**上级域名服务器**进行迭代查询
+  - 首先**本地域名服务器**向**根域名服务器**发起请求，**根域名服务器**返回**顶级域名服务器的地址**给**本地服务器**
+  - **本地域名服务器**拿到这个**顶级域名服务器的地址**后，就向**其**发起请求，获取**权限域名服务器的地址**
+  - **本地域名服务器**根据权限域名服务器的地址向其发起请求，**最终得到该域名对应的 IP 地址**
+- **本地域名服务器**将得到的 IP 地址返回给**操作系统**，同时自己将 IP 地址缓存起来
+- **操作系统**将 IP 地址返回给**浏览器**，同时自己也将 IP 地址缓存起
+- 至此，**浏览器**就得到了域名对应的 IP 地址，并将 IP 地址缓存起
+
+流程如下图所示：
+
+![img](https://static.vue-js.com/bec3c740-b78f-11eb-ab90-d9ae814b240d.png)
+
+
 
 ---
 
